rubocop/examples/good/Style_AsciiIdentifiers.rb
# 'https://github.com/bbatsov/ruby-style-guide#english-identifiers'

# Name identifiers in English.

# good
salary = 1_000
