rubocop/examples/bad/Style_AsciiIdentifiers.rb
# 'https://github.com/bbatsov/ruby-style-guide#english-identifiers'

# Name identifiers in English.

# bad - identifier using non-ascii characters
заплата = 1_000

# bad - identifier is a Bulgarian word, written with Latin letters (instead of Cyrillic)
zaplata = 1_000
